# gardensensor

./: .gitignore  LICENSE  README.md
3d_models/: sensor_bottom.stl  sensor_top.stl
firmware/: .gitignore  CMakeLists.txt  Makefile  partitions_ota_msc.csv  sdkconfig  sdkconfig.old  version.h.in
firmware/main/: CMakeLists.txt  DNSServerTask.c  DNSServerTask.h  FileAccessTask.c  FileAccessTask.h  FileHandler.c  FileHandler.h  FileServer.c  FileServerCommon.h  MSCStorage.c  MSCStorage.h  StatusTask.c  StatusTask.h  TaskCommon.c  TaskCommon.h  Wifi.c  Wifi.h  XKGardenSensorDef.h  dictionary.c  gscommon.c  gscommon.h  idf_component.yml  main.c  main.cpp  mqtt_task.c  mqtt_task.h  sensor.c  sensor.h
firmware/main/config/: config.ini  dictionary.h  iniparser.c
firmware/main/frontend/: admin.css  admin.html  download.html  setting.html  setting.js  table.js  update.html
firmware/release/firmware_release/: Release-note.md  config.ini
firmware/release/flash_download_tool/configure/esp32s3/: spi_download.conf  utility.conf
firmware/release/flash_download_tool/logs/: F412FA8602CC.txt
hardware/gardensensor/gerber/: sensor.DRR  sensor.gm13
hardware/xkgardensensor/: esp.SchDoc  power.SchDoc  xksoilsensor.PcbDoc
hardware/xkgardensensor/gerber/: xksoilsensor.LDP  xksoilsensor.TXT  xksoilsensor.gko  xksoilsensor.gpb  xksoilsensor.gtl  xksoilsensor.gto  xksoilsensor.gts
hardware/xksoilsensor/: xksoilsensor.PrjPcb  xksoilsensor.PrjPcbStructure
hardware/xksoilsensor/gerber/: xksoilsensor.gbl  xksoilsensor.gbs  xksoilsensor.gm15  xksoilsensor.gpt  xksoilsensor.gtp
(+1 files in other folders)
